# monoid-statistics

./: .hgtags  .travis.yml  Changelog.md  README.md  monoid-accum.cabal  monoid-statistics.cabal
.github/workflows/: ci.yml
Data/Monoid/: Accum.hs  Statistics.hs
Data/Monoid/Statistics/: Class.hs  Extra.hs  Numeric.hs
Statistics/: Monoid.hs
Statistics/Monoid/: Class.hs  Extra.hs  Numeric.hs
bench/: Main.hs  bench.hs
tests/: Main.hs  doctests.hs
