Name:           monoid-statistics
Version:        1.1.0
Cabal-Version:  >= 1.10
License:        BSD3
License-File:   LICENSE
Author:         Alexey Khudyakov <alexey.skladnoy@gmail.com>
Maintainer:     Alexey Khudyakov <alexey.skladnoy@gmail.com>
Homepage:       https://github.com/Shimuuar/monoid-statistics
Bug-reports:    https://github.com/Shimuuar/monoid-statistics/issues
Category:       Statistics
Build-Type:     Simple
Synopsis:       
  Monoids for calculation of statistics of sample
Description:
  Monoids for calculation of statistics of sample. This approach
  allows to calculate many statistics in one pass over data and
  possibility to parallelize calculations. However not all statistics 
  could be calculated this way.

tested-with:
    GHC ==7.4.2
     || ==7.6.3
     || ==7.8.4
     || ==7.10.3
     || ==8.0.2
     || ==8.2.2
     || ==8.4.4
     || ==8.6.5
     || ==8.8.1
  , GHCJS ==8.4

extra-source-files:
  README.md

source-repository head
  type:     git
  location: https://github.com/Shimuuar/monoid-statistics

Library
  default-language: Haskell2010
  ghc-options:      -Wall -O2
  --
  Build-Depends:    base            >=4.5  && <5
                  , exceptions      >=0.10
                  , vector          >=0.11 && <1
                  , vector-th-unbox >=0.2.1.6
                  , math-functions  >=0.3
  if impl(ghc < 7.6)
    Build-depends: ghc-prim
  if impl(ghc < 8.0)
    Build-Depends: semigroups >= 0.18 && < 0.19
  --
  Exposed-modules: Statistics.Monoid
                   Statistics.Monoid.Class
                   Statistics.Monoid.Numeric
                   Statistics.Monoid.Extra

test-suite monoid-statistics-tests
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  ghc-options:      -Wall -threaded
  -- Tests for math-functions' Sum require SSE2 on i686 to pass
  -- (because of excess precision)
  if arch(i386)
    ghc-options:  -msse2
  hs-source-dirs: tests
  Main-is:        Main.hs
  Other-Modules:
  Build-Depends: monoid-statistics
               , base             >=4.5 && <5
               , math-functions   >=0.3
               , tasty            >=0.11
               , tasty-quickcheck >=0.9
               , tasty-hunit
               , QuickCheck

benchmark monoid-stat-bench
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  ghc-options:      -Wall -O2
  hs-source-dirs:   bench
  Main-is:          Main.hs
  Build-Depends: monoid-statistics
               , base           >=4.5  && <5
               , vector         >=0.11 && <1
               , math-functions >=0.3
               , mwc-random     >=0.13
               , criterion
